# m5-env-probe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig
components/bme680/: CMakeLists.txt  Kconfig.projbuild  component.mk  esp_bme680.c
components/bme680/include/: esp_bme680.h
data/: config.json_sample
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.cpp  meter.cpp  meter.h
